# PyTorch_BlazeFace

./: .gitignore  .travis.yml  README.md  docker-compose.yml  setup.cfg
blazeface/: __init__.py  mediapipe_implementation.py  model.py
docker/: Dockerfile.cpu
tests/: test_blazeface.py
