[metadata]
name = blazeface
version = attr: blazeface.__version__
url = https://github.com/tkat0/PyTorch_BlazeFace
author = tkat0
author_email = tkato.dev@gmail.com
maintainer = tkat0
maintainer_email = tkato.dev@gmail.com
license = Apache-2.0
description = PyTorch implementation of BlazeFace
long_description = file: README.md
long_description_content_type=”text/markdown”

[options]
packages = find:
